@@ -4,17 +4,26 @@ import jakarta.persistence.Embeddable;
 
 @Embeddable
 public record Password(String value) {
-    public Password{
-        if(value==null || value.trim().isEmpty()){
+    public Password {
+        if (value == null || value.isBlank()) {
             throw new IllegalArgumentException("Password can't be empty");
         }
-        if(value.length()<8){
-            throw new IllegalArgumentException("Password's length must be equal or larger than 8");
+    }
+
+    public static void validate(String password) {
+        if (password.length() < 8) {
+            throw new IllegalArgumentException(
+                    "Password must be at least 8 characters"
+            );
         }
-        if(!value.matches(".*\\d.*") ||
-            !value.matches(".*[a-zA-Z].*") ||
-            !value.matches(".*[^a-zA-Z0-9].*"))
-            throw new IllegalArgumentException("Password must contain characters, digits, and special characters");
+
+        if (!password.matches(".*\\d.*")
+                || !password.matches(".*[a-zA-Z].*")
+                || !password.matches(".*[^a-zA-Z0-9].*")) {
+            throw new IllegalArgumentException(
+                    "Password must contain letters, digits and special characters"
+            );
         }
+    }
 
 }
